k8s/app/templates/telegraf-server/telegraf-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: telegraf-srv-ing
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: telegraf-srv.naren.com 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: telegraf-srv
            port:
              number: 8186
